@@ -1,3 +1,8 @@
+Mon Jun 14 19:26:12 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * ACE-INSTALL.html:
+          Updated supported platforms and Borland instructions
+
 Mon Jun 14 13:58:02 2004  Douglas C. Schmidt  <schmidt@cs.wustl.edu>
 
 	* docs/ACE-guidelines.html: Updated the guidelines to
